[package]
authors = ["chrispaig3"]
name = "expo"
version = "2.0.0"
edition = "2024"
license = "MIT"
description = "A dry eraser for unwanted GitHub repos written in Rust."
[dependencies]
clap = { version = "4.5.39", features = ["derive"] }

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
