[package]
authors = ["chrispaig3"]
name = "expo"
version = "2.0.0"
edition = "2024"
license = "MIT"
description = "A dry eraser for unwanted GitHub repos written in Rust."
[dependencies]
clap = { version = "4.5.39", default-features = false, features = ["std", "help", "usage", "error-context", "derive"] }
tokio = { version = "1.41", default-features = false, features = ["rt", "macros"] }
futures = { version = "0.3", default-features = false, features = ["alloc"] }

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
incremental = false
