[package]
authors = ["chrispaig3"]
name = "expo"
version = "2.0.1"
edition = "2024"
license = "MIT"
description = "A dry eraser for unwanted GitHub repos written in Rust."
[dependencies]
clap = { version = "4.6.0", default-features = false, features = ["std", "help", "usage", "error-context", "derive"] }
tokio = { version = "1.50.0", default-features = false, features = ["rt", "macros"] }
futures = { version = "0.3.32", default-features = false, features = ["alloc"] }

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
incremental = false
